# AuthService

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  domain-driven-architecture  pyproject.toml  requirements.txt
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2026_04_20_2212-0a26eabedc44_create_table_users.py  2026_04_22_1529-df5d8745d366_add_2_new_cols_to_table_users_email_.py  2026_05_01_1808-cf8bced9c229_create_table_refresh_tokens.py  2026_05_01_1835-80b8c52f0b27_fix_refresh_tokens_table_create_at_.py
app/api/dependencies/: __init__.py  auth.py  database.py  rate_limiter.py  redis_dep.py  security.py  users.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py  users_crud.py
app/core/: config.py  logger.py  security.py
app/core/dependencies/: auth.py  database.py  users.py
app/core/security/: __init__.py  passwords.py  tokens.py
app/core/settings/: __init__.py  environments_settings.py  global_settings.py  logging_settings.py  password_settings.py  postgres_settings.py  redis_settings.py  ssm_source_settings.py  tokens_settings.py
app/db/: redis_connection.py  session.py
app/models/: __init__.py  tokens.py  users.py
app/schemas/: token_schemas.py
app/services/: auth_service.py  users_crud.py
docs/: 01_architecture.md  02_operations.md  03_api_contracts.md  04_testing_suite.md
scripts/: deploy.sh
tests/: conftest.py
tests/integration/: test1.py
tests/unit/: test1.py  test_passwords.py  test_tokens.py  test_user_schemas.py
